# posits-in-linmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: posit_vs_float_evaluation.md
include/: linmath_posit.h
src/: metrics.cpp
